# inventory-app

./: .gitignore  Cargo.toml  README.md
api-server/: .gitignore  Cargo.toml
api-server/src/: main.rs
api-server/src/config/: default.rs  mod.rs  v1.rs
api-server/src/log/: mod.rs
cli-client/: Cargo.toml
xterm-app/: index.html  package.json
xterm-app/public/: site.webmanifest
xterm-app/src/: main.ts  style.css
