[package]
name = "api-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
actix-ws = "0.3.0"
bytes = "1.10.1"
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.41"
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-actix-web = "0.7.18"
sqlx = { version = "0.8.6", features = [
  "chrono",
  "derive",
  "postgres",
  "uuid",
  "runtime-tokio",
  "sqlite",
] }
uuid = { version = "1.17.0", features = ["fast-rng", "v7"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.23"
